# devimg

./: .gitignore  README.md  ansible-lint.yaml  ansible-navigator.yaml  ansible.cfg  devimg.xml  execution-environment.yaml  inventory.yaml  kitty-desktop.sh  pyproject.toml  requirements.txt  requirements.yaml  test.yaml  virt.sh
bootc-docker/: bootc.toml  compose.yaml
docker/: compose.yaml
inventory/dev/: hosts.yaml  molecule.yaml
inventory/dev/group_vars/: all.yaml  libvirt.yaml  main.yaml  targets.yaml
inventory/dev/host_vars/: acederberg-redhat.yaml  acederberg-ubuntu.yaml
molecule/provision/: create.yaml  molecule.yaml
notebooks/: _metadata.yaml  _quarto.yml  ansible.qmd  index.qmd  index.scss  libvirt.qmd  openshift.qmd  rhel.qmd
playbooks/: backgrounds.yaml  builds.yaml  context.yaml  desktop.yaml  ee.yaml  installs.ansible.yaml  installs.yaml  prepare.yaml  setup.yaml  site.yaml  test.yaml  virt-customize.yaml  virt-up.yaml  virt.yaml  vms.yaml
playbooks/roles/desktop/tasks/: backgrounds.yaml  kitty.yaml  main.yaml
playbooks/roles/templates/: kitty.conf.j2  kitty.desktop.j2  zshrc.j2
playbooks/templates/: 00-backgrounds.conf.j2  01-screensaver.conf.j2  backgrounds.xml.j2
playbooks/templates/libvirt/: customize.j2  customize.sh  debian-preseed.cfg.j2  domain.xml.j2  network.xml.j2  virt-post.yaml
playbooks/testing/: context.yaml  rhel.yaml  virt-cleanup.yaml  virt-customize.yaml  virt-post.yaml  virt-up.yaml  virt.yaml
playbooks/testing/tasks/: context.yaml  domain.yaml  images.yaml
playbooks/vars/: main.yaml
(+43 files in other folders)
