[project]
name = "mkdevmachine"
version = "0.1.0"
description = "Ansible tooling to intall all of the dependencies onto a dev machine."
authors = [
    {name = "Adrian Cederberg"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible (>=12.0.0,<13.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.devel.dependencies]
argcomplete = "^3.6.2"

