[project]
name = "mkdevmachine"
version = "0.1.0"
description = "Ansible tooling to intall all of the dependencies onto a dev machine."
authors = [
    {name = "Adrian Cederberg"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "libvirt-python (>=11.8.0,<12.0.0)",
    "lxml (>=6.0.2,<7.0.0)"
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.devel.dependencies]
argcomplete = "^3.6.2"

# NOTE(acederberg): These are here because including them under the base dependencies
#                   results in an attempt to uninstall the already installed ansible
#                   dependencies (originating from `dnf`).
ansible = "(>=12.0.0,<13.0.0)",
ansible-dev-tools = "(>=25.8.3,<26.0.0)",

